# live-bootcamp-project

./: .gitignore  compose.override.yml  compose.yml  justfile  package-lock.json  package.json  playwright.config.ts
.github/workflows/: _build.yml  aws-deploy.yml  build.yml  deploy.yml  e2e.yml  integration-tests.yml  prod.yml  test.yml
app-service/: Cargo.toml  Dockerfile  build.rs
app-service/assets/: app.js
app-service/src/: main.rs
app-service/templates/: index.html
auth-service/: .dockerignore  Cargo.toml  Dockerfile  README.md  api_schema.yml  build.rs
auth-service/assets/: app.js  index.html
auth-service/migrations/: 20240609162239_create_users_table.up.sql
auth-service/postman/collections/: Authentication_Service_API.postman_collection.json  Prod.postman_environment.json  data.json
auth-service/postman/scripts/: signup-post-request.js  signup-pre-request.js
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/app_state/: mod.rs
auth-service/src/domain/: data_stores.rs  email.rs  environment.rs  error.rs  mod.rs  password.rs  path.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  mod.rs  signup.rs  users.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: aws_ses_email_client.rs  banned_token_store.rs  data_stores.rs  grpc_auth.rs  hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mock_email_client.rs  mod.rs  postgres_user_store.rs
auth-service/src/services/data_stores/: banned_token_store.rs  mod.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs  two_fa_token_store.rs  user_store.rs
auth-service/src/utils/: auth.rs  constants.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  main.rs  root.rs  routes.rs  signup.rs  users.rs  verify_2fa.rs  verify_token.rs
cdk/: cdk.context.json  cdk.json  esbuild.config.mjs  package-lock.json  package.json  tsconfig.json
cdk/lib/constructs/: s3-oac-origin.ts
cdk/lib/stacks/: livebootcamp.stack.ts
cdk/src/lambda/: dummy.ts  envs.json  jwt-protection.ts
e2e/: app-service.spec.ts  auth-service.spec.ts
proto/: authentication.proto
proxy/local_templates/: default.conf.template
proxy/templates/: default.conf.template
