[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
default-run = "auth-service"

[dependencies]
async-trait = "0.1.80"
axum = "0.7.4"
axum-extra = { version = "0.9.3", features = ["cookie"] }
chrono = { version = "0.4.38", default-features = true }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
prost = "0.12.6"
rand = "0.8.5"
regex-automata = "0.4.6"
reqwest = { version = "0.12.4", default-features = false, features = [
    "json",
    "rustls-tls",
    "cookies",
] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38", features = ["full"] }
tonic = "0.11.0"
tower-http = { version = "0.5.0", features = ["fs", "cors", "trace"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
validator = "0.18.1"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
] }
argon2 = { version = "0.5.3", features = ["std"] }
redis = { version = "0.25.4", features = ["tokio-comp"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
thiserror = "1.0.61"
color-eyre = "0.6.3"
tracing-error = "0.2.0"
secrecy = { version = "0.8.0", features = ["serde"] }
aws-config = "1.5.3"
aws-sdk-sesv2 = "1.36.0"

[dev-dependencies]
fake = "=2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"

[build-dependencies]
tonic-build = "0.11.0"
